--- a/03-웹ㄷㅣ자인기능사/html-ok저축은행/css/comm.css
+++ b/03-웹ㄷㅣ자인기능사/html-ok저축은행/css/comm.css
@@ -183,7 +183,7 @@ footer{
 
 /* id값을 잡을땐 #으로  */
 #modal {
-    display: none;
+    /* display: none; */
     justify-content: center;
     align-items: center;
     position: fixed; top: 0;left: 0;right: 0 ;bottom: 0;
@@ -193,6 +193,8 @@ footer{
 #modal .inner {
     position: relative;
     display: inline-block;
+    margin-top: 200px;
+    margin-left: 500px;
     border: 2px solid #fff;    
 }
 
